--- a/Test Rmd.Rmd
+++ b/Test Rmd.Rmd
@@ -4,29 +4,11 @@ author: "Gidoin"
 date: "3 août 2017"
 output: 
   html_document: 
-    keep_md: yes
+    keep_md: yes 
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+This rmd document is awesome
+```{r}
+getwd()
+library(readr)
+read_csv("CSVtest.csv")
 ```
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
