Roadmap 3eme commit.

--- a/roadmap.Rmd
+++ b/roadmap.Rmd
@@ -49,6 +49,8 @@ output:
 
     > ##### *Dans la nouvelle Assemblée, on dénombre au total 271 élus municipaux, 76 départementaux et 65 régionaux, sans compter le sénateur socialiste Luc Carvounas et les députés européens Louis Aliot, Marine Le Pen (Front national), Constance Le Grip (Les Républicains) et Jean-Luc Mélenchon (La France insoumise), qui vont devoir abandonner leur mandat avant son terme.* **In fine, seuls 188 parlementaires arrivent à l’Assemblée vierges de toute expérience élective**
     
+    > ##### *La réforme de 2014 devrait quelque peu alléger l’emploi du temps surchargé de certains élus. On trouve tout de même pas moins de 85 députés qui exercent en parallèle deux autres mandats, soit 15 % environ et 241 autres (42 % de l’Hémicycle) qui en ont un autre. Ils ne seront que 43 % à se consacrer uniquement à la députation.* 
+    
     > ##### *La nette progression de la part des femmes, passée en cinq ans de 27 % à 39 %, est à mettre largement au crédit de La République en marche (LRM) et du MoDem, qui comptent 47 % de députées.*
     
     
